--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "framer-motion": "^12.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-parallax-tilt": "^1.7.282",
     "react-router-dom": "^7.1.5",
-    "react-tilt": "^1.0.2"
+    "react-tilt": "^1.0.2",
+    "react-vertical-timeline-component": "^3.5.3",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
