--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@rollup/plugin-node-resolve": "^16.0.0",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.2",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.0",
@@ -34,7 +35,8 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "postcss": "^8.5.1",
+    "rollup": "^4.34.9",
     "tailwindcss": "^3.4.17",
-    "vite": "^5.4.8"
+    "vite": "^6.2.0"
   }
 }
