--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "postcss": "^8.5.1",
     "rollup": "^4.34.9",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-static-copy": "^2.3.0"
   }
 }
-
