--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.121.4",
-    "@react-three/fiber": "^8.17.14",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "compromise": "^14.14.4",
     "framer-motion": "^12.4.1",
+    "lucide-react": "^0.506.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
@@ -21,6 +22,8 @@
     "react-router-dom": "^7.1.5",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.5.3",
+    "tailwindcss-blend-mode": "^1.0.0",
+    "tailwindcss-gradients": "^3.0.0",
     "three": "^0.173.0"
   },
   "devDependencies": {
