--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
+    "@vercel/analytics": "^1.5.0",
     "compromise": "^14.14.4",
     "framer-motion": "^12.4.1",
     "lucide-react": "^0.506.0",
